--- a/BlazorApp1/Components/Pages/Minus.razor
+++ b/BlazorApp1/Components/Pages/Minus.razor
@@ -20,7 +20,7 @@ else if (currentCount == 0)
     <div class="d-flex align-items-center gap-4 mt-3">
         <p class="mt-3">El contador esta en 0, perdiste </p>
         <button class="btn btn-success mt-3" @onclick="ResetCount">
-            Reiniciar
+            Reiniciar.
         </button>
     </div>
 
