--- a/BlazorApp1/Components/Layout/NavMenu.razor
+++ b/BlazorApp1/Components/Layout/NavMenu.razor
@@ -36,6 +36,18 @@
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Todo
             </NavLink>
         </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="mockCards">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> MockCards
+            </NavLink>
+        </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="movie-cards">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> MockMoviesCards
+            </NavLink>
+        </div>
     </nav>
 </div>
 
